Resolve conflicts between PR #152 and branch master (#211)
Signed-off-by: danbone <daniel.d.bone@gmail.com>
Co-authored-by: Daniel Bone <daniel.bone@imgtec.com>
Co-authored-by: danbone <daniel.d.bone@gmail.com>

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(core
   FusionDecode.cpp
   Core.cpp
   SimpleBranchPred.cpp
+  ICache.cpp
   Fetch.cpp
   Decode.cpp
   VectorUopGenerator.cpp
