--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(core/l2cache)
 add_subdirectory(core/rename)
 add_subdirectory(core/lsu)
 add_subdirectory(core/issue_queue)
+add_subdirectory(core/icache)
 add_subdirectory(core/branch_pred)
 add_subdirectory(core/dcache)
 add_subdirectory(core/vector)
