--- a/test/core/lsu/test_cores/test_small_core_full.yaml
+++ b/test/core/lsu/test_cores/test_small_core_full.yaml
@@ -4,6 +4,8 @@
 
 top.cpu.core0:
   fetch.params.num_to_fetch:   2
+  icache.params.l1_always_hit: true
+  icache.params.cache_latency: 0
   decode.params.num_to_decode: 2
   rename.params.num_to_rename: 2
   dispatch.params.num_to_dispatch: 2
@@ -27,7 +29,7 @@ top.cpu.core0.extension.core_extensions:
       ["vint", "vset", "vdiv", "vmul"]
     ]
   issue_queue_to_pipe_map:
-  [ 
+  [
     ["0"],
     ["1"],
     ["2"],
