Updated vector tests

--- a/test/core/vector/CMakeLists.txt
+++ b/test/core/vector/CMakeLists.txt
@@ -24,15 +24,15 @@ file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/unsupported.json                 ${
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vlsu_load.json                   ${CMAKE_CURRENT_BINARY_DIR}/vlsu_load.json SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vlsu_store.json                  ${CMAKE_CURRENT_BINARY_DIR}/vlsu_store.json SYMBOLIC)
 
-sparta_named_test(Vector_test_vsetivli      Vector_test -l top info vsetivli.out      -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_e8m4.json)
-sparta_named_test(Vector_test_vsetvli       Vector_test -l top info vsetvli.out       -c test_cores/test_big_core.yaml --input-file vsetvli_vaddvv_e32m1ta.json)
-sparta_named_test(Vector_test_vsetvl        Vector_test -l top info vsetvl.out        -c test_cores/test_big_core.yaml --input-file vsetvl_vaddvv_e64m1ta.json)
-sparta_named_test(Vector_test_vsetivli_tail Vector_test -l top info vsetivli_tail.out -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_tail_e8m8ta.json)
-sparta_named_test(Vector_test_multiple_vset Vector_test -l top info mulitple_vset.out -c test_cores/test_big_core.yaml --input-file multiple_vset.json)
-sparta_named_test(Vector_test_vmulvx        Vector_test -l top info vmulvx.out        -c test_cores/test_big_core.yaml --input-file vmulvx_e8m4.json)
-sparta_named_test(Vector_test_vwmulvv       Vector_test -l top info vwmulvv.out       -c test_cores/test_big_core.yaml --input-file vwmulvv_e8m4.json)
-sparta_named_test(Vector_test_vmseqvv       Vector_test -l top info vmseqvv.out       -c test_cores/test_big_core.yaml --input-file vmseqvv_e8m4.json)
-sparta_named_test(Vector_test_vsadd         Vector_test -l top info vsadd.out         -c test_cores/test_big_core.yaml --input-file vsadd.json)
-sparta_named_test(Vector_unsupported_test   Vector_test -l top info unsupported.out   -c test_cores/test_big_core.yaml --input-file vrgather.json)
-sparta_named_test(VLSU_test_load            VLSU_test   -l top info vlsu_load.out     -c test_cores/test_big_core.yaml --input-file vlsu_load.json)
-sparta_named_test(VLSU_test_store           VLSU_test   -l top info vlsu_store.out    -c test_cores/test_big_core.yaml --input-file vlsu_store.json)
+sparta_named_test(Vector_test_vsetivli      Vector_test -l top.cpu.core0.vlsu info vsetivli.out      -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_e8m4.json)
+sparta_named_test(Vector_test_vsetvli       Vector_test -l top.cpu.core0.vlsu info vsetvli.out       -c test_cores/test_big_core.yaml --input-file vsetvli_vaddvv_e32m1ta.json)
+sparta_named_test(Vector_test_vsetvl        Vector_test -l top.cpu.core0.vlsu info vsetvl.out        -c test_cores/test_big_core.yaml --input-file vsetvl_vaddvv_e64m1ta.json)
+sparta_named_test(Vector_test_vsetivli_tail Vector_test -l top.cpu.core0.vlsu info vsetivli_tail.out -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_tail_e8m8ta.json)
+sparta_named_test(Vector_test_multiple_vset Vector_test -l top.cpu.core0.vlsu info mulitple_vset.out -c test_cores/test_big_core.yaml --input-file multiple_vset.json)
+sparta_named_test(Vector_test_vmulvx        Vector_test -l top.cpu.core0.vlsu info vmulvx.out        -c test_cores/test_big_core.yaml --input-file vmulvx_e8m4.json)
+sparta_named_test(Vector_test_vwmulvv       Vector_test -l top.cpu.core0.vlsu info vwmulvv.out       -c test_cores/test_big_core.yaml --input-file vwmulvv_e8m4.json)
+sparta_named_test(Vector_test_vmseqvv       Vector_test -l top.cpu.core0.vlsu info vmseqvv.out       -c test_cores/test_big_core.yaml --input-file vmseqvv_e8m4.json)
+sparta_named_test(Vector_test_vsadd         Vector_test -l top.cpu.core0.vlsu info vsadd.out         -c test_cores/test_big_core.yaml --input-file vsadd.json)
+sparta_named_test(Vector_unsupported_test   Vector_test -l top.cpu.core0.vlsu info unsupported.out   -c test_cores/test_big_core.yaml --input-file vrgather.json)
+sparta_named_test(VLSU_test_load            VLSU_test   -l top.cpu.core0.vlsu info vlsu_load.out     -c test_cores/test_big_core.yaml --input-file vlsu_load.json)
+sparta_named_test(VLSU_test_store           VLSU_test   -l top.cpu.core0.vlsu info vlsu_store.out    -c test_cores/test_big_core.yaml --input-file vlsu_store.json)
