Created instgen lib

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,10 +1,6 @@
 project (core)
 add_library(core
   Core.cpp
-  Inst.cpp
-  InstArchInfo.cpp
-  InstGroup.cpp
-  InstGenerator.cpp
   ROB.cpp
   MMU.cpp
   Preloader.cpp
@@ -13,14 +9,24 @@ add_library(core
   CPUTopology.cpp
 )
 
+add_library(instgen
+  Inst.cpp
+  InstArchInfo.cpp
+  InstGroup.cpp
+  InstGenerator.cpp
+)
+
+target_link_libraries(instgen stf zstd)
+
 get_property(SPARTA_INCLUDE_PROP TARGET SPARTA::sparta PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
 target_include_directories(core SYSTEM PRIVATE ${SPARTA_INCLUDE_PROP})
 
 add_subdirectory(fetch)
 add_subdirectory(decode)
+add_subdirectory(rename)
 add_subdirectory(dispatch)
 add_subdirectory(execute)
 add_subdirectory(vector)
 add_subdirectory(lsu)
 
-target_link_libraries(core fetch decode dispatch execute vector lsu)
+target_link_libraries(core fetch decode rename dispatch execute vector lsu instgen mss)
