--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,11 +66,8 @@ include_directories (SYSTEM fsl)
 include_directories (SYSTEM mavis)
 include_directories (SYSTEM stf_lib)
 
-# Mavis, the Core, MSS, the simulator and Fusion
-
+# Mavis
 add_subdirectory (mavis)
-add_subdirectory (core)
-add_subdirectory (mss)
 
 # Tell FSL to use the top mavis submodule, instead of fsl's submodule
 set(FSL_MAVIS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/mavis")
@@ -78,6 +75,10 @@ add_subdirectory (fsl)
 
 # Add STF library to the build
 add_subdirectory (${STF_LIB_BASE})
+
+# The Core and MSS
+add_subdirectory (core)
+add_subdirectory (mss)
 
 # Add testing, but do not build as part of the 'all' target
 add_subdirectory (test EXCLUDE_FROM_ALL)
@@ -87,7 +88,7 @@ add_executable(olympia
   sim/OlympiaSim.cpp
   sim/main.cpp
   )
-target_link_libraries (olympia core mss SPARTA::sparta mavis ${STF_LINK_LIBS})
+target_link_libraries (olympia core mss SPARTA::sparta ${STF_LINK_LIBS})
 if (CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
   target_compile_options (core    PUBLIC -flto)
   target_compile_options (mss     PUBLIC -flto)
