bpu testbench structure

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(core/lsu)
 add_subdirectory(core/issue_queue)
 add_subdirectory(core/icache)
 add_subdirectory(core/branch_pred)
+add_subdirectory(core/bpu)
 add_subdirectory(core/dcache)
 add_subdirectory(core/vector)
 add_subdirectory(fusion)
