--- a/test/core/vector/CMakeLists.txt
+++ b/test/core/vector/CMakeLists.txt
@@ -19,17 +19,6 @@ file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vmseqvv_e8m4.json                ${
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vrgather.json                    ${CMAKE_CURRENT_BINARY_DIR}/vrgather.json SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/vsadd.json                       ${CMAKE_CURRENT_BINARY_DIR}/vsadd.json SYMBOLIC)
 
-sparta_named_test(Vector_test_vsetivli      Vector_test -l top info vsetivli.out      -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_e8m4.json)
-sparta_named_test(Vector_test_vsetvli       Vector_test -l top info vsetvli.out       -c test_cores/test_big_core.yaml --input-file vsetvli_vaddvv_e32m1ta.json)
-sparta_named_test(Vector_test_vsetvl        Vector_test -l top info vsetvl.out        -c test_cores/test_big_core.yaml --input-file vsetvl_vaddvv_e64m1ta.json)
-sparta_named_test(Vector_test_vsetivli_tail Vector_test -l top info vsetivli_tail.out -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_tail_e8m8ta.json)
-sparta_named_test(Vector_test_multiple_vset Vector_test -l top info mulitple_vset.out -c test_cores/test_big_core.yaml --input-file multiple_vset.json)
-sparta_named_test(Vector_test_vmulvx        Vector_test -l top info vmulvx.out        -c test_cores/test_big_core.yaml --input-file vmulvx_e8m4.json)
-sparta_named_test(Vector_test_vmulvv        Vector_test -l top info vmulvv.out        -c test_cores/test_big_core.yaml --input-file vwmulvv_e8m4.json)
-sparta_named_test(Vector_test_vmseqvv       Vector_test -l top info vmseqvv.out       -c test_cores/test_big_core.yaml --input-file vmseqvv_e8m4.json)
-sparta_named_test(Vector_test_vsadd         Vector_test -l top info vsadd.out         -c test_cores/test_big_core.yaml --input-file vsadd.json)
-sparta_named_test(Vector_unsupported_test   Vector_test -l top info unsupported.out   -c test_cores/test_big_core.yaml --input-file vrgather.json)
-
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/elementwise.json ${CMAKE_CURRENT_BINARY_DIR}/elementwise.json SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/widening.json ${CMAKE_CURRENT_BINARY_DIR}/widening.json SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/widening_mixed.json ${CMAKE_CURRENT_BINARY_DIR}/widening_mixed.json SYMBOLIC)
@@ -39,28 +28,26 @@ file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/mac_widening.json ${CMAKE_CURRENT_B
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/single_dest.json ${CMAKE_CURRENT_BINARY_DIR}/single_dest.json SYMBOLIC)
 file(CREATE_LINK ${CMAKE_CURRENT_SOURCE_DIR}/int_ext.json ${CMAKE_CURRENT_BINARY_DIR}/int_ext.json SYMBOLIC)
 
-sparta_named_test(Vector_test_elementwise
-  Vector_test -l top info vuop_elementwise.out -c test_cores/test_big_core.yaml --input-file elementwise.json
-)
-sparta_named_test(Vector_test_widening
-  Vector_test -l top info vuop_widening.out -c test_cores/test_big_core.yaml --input-file widening.json
-)
-sparta_named_test(Vector_test_widening_mixed
-  Vector_test -l top info vuop_widening_mixed.out -c test_cores/test_big_core.yaml --input-file widening_mixed.json
-)
-sparta_named_test(Vector_test_narrowing
-  Vector_test -l top info vuop_narrowing.out -c test_cores/test_big_core.yaml --input-file narrowing.json
-)
-sparta_named_test(Vector_test_mac
-  Vector_test -l top info vuop_mac.out -c test_cores/test_big_core.yaml --input-file mac.json
-)
-sparta_named_test(Vector_test_mac_widening
-  Vector_test -l top info vuop_mac_widening.out -c test_cores/test_big_core.yaml --input-file mac_widening.json
-)
-sparta_named_test(Vector_test_single_dest
-  Vector_test -l top info vuop_single_dest.out -c test_cores/test_big_core.yaml --input-file single_dest.json
-)
+# Vset tests
+sparta_named_test(Vector_test_vsetivli      Vector_test -l top info vsetivli.out      -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_e8m4.json        --expected-num-uops 4)
+sparta_named_test(Vector_test_vsetvli       Vector_test -l top info vsetvli.out       -c test_cores/test_big_core.yaml --input-file vsetvli_vaddvv_e32m1ta.json      --expected-num-uops 1)
+sparta_named_test(Vector_test_vsetvl        Vector_test -l top info vsetvl.out        -c test_cores/test_big_core.yaml --input-file vsetvl_vaddvv_e64m1ta.json       --expected-num-uops 1)
+sparta_named_test(Vector_test_vsetivli_tail Vector_test -l top info vsetivli_tail.out -c test_cores/test_big_core.yaml --input-file vsetivli_vaddvv_tail_e8m8ta.json --expected-num-uops 8)
+sparta_named_test(Vector_test_multiple_vset Vector_test -l top info mulitple_vset.out -c test_cores/test_big_core.yaml --input-file multiple_vset.json               --expected-num-uops 15)
 
-sparta_named_test(Vector_test_int_ext
-  Vector_test -l top info vuop_int_ext.out -c test_cores/test_big_core.yaml --input-file int_ext.json
-)
+# Unsupported test
+sparta_named_test(Vector_unsupported_test   Vector_test -l top info unsupported.out   -c test_cores/test_big_core.yaml --input-file vrgather.json)
+
+# Vector sequencing tests
+sparta_named_test(Vector_test_vmulvx         Vector_test -l top info vmulvx.out              -c test_cores/test_big_core.yaml --input-file vmulvx_e8m4.json          --expected-num-uops 4)
+sparta_named_test(Vector_test_vmulvv         Vector_test -l top info vmulvv.out              -c test_cores/test_big_core.yaml --input-file vwmulvv_e8m4.json         --expected-num-uops 8)
+sparta_named_test(Vector_test_vmseqvv        Vector_test -l top info vmseqvv.out             -c test_cores/test_big_core.yaml --input-file vmseqvv_e8m4.json         --expected-num-uops 4)
+sparta_named_test(Vector_test_vsadd          Vector_test -l top info vsadd.out               -c test_cores/test_big_core.yaml --input-file vsadd.json                --expected-num-uops 4)
+sparta_named_test(Vector_test_elementwise    Vector_test -l top info vuop_elementwise.out    -c test_cores/test_big_core.yaml --input-file elementwise.json          --expected-num-uops 4)
+sparta_named_test(Vector_test_widening       Vector_test -l top info vuop_widening.out       -c test_cores/test_big_core.yaml --input-file widening.json             --expected-num-uops 8)
+sparta_named_test(Vector_test_widening_mixed Vector_test -l top info vuop_widening_mixed.out -c test_cores/test_big_core.yaml --input-file widening_mixed.json       --expected-num-uops 8)
+sparta_named_test(Vector_test_narrowing      Vector_test -l top info vuop_narrowing.out      -c test_cores/test_big_core.yaml --input-file narrowing.json            --expected-num-uops 8)
+sparta_named_test(Vector_test_mac            Vector_test -l top info vuop_mac.out            -c test_cores/test_big_core.yaml --input-file mac.json                  --expected-num-uops 4)
+sparta_named_test(Vector_test_mac_widening   Vector_test -l top info vuop_mac_widening.out   -c test_cores/test_big_core.yaml --input-file mac_widening.json         --expected-num-uops 8)
+sparta_named_test(Vector_test_single_dest    Vector_test -l top info vuop_single_dest.out    -c test_cores/test_big_core.yaml --input-file single_dest.json          --expected-num-uops 4)
+sparta_named_test(Vector_test_int_ext        Vector_test -l top info vuop_int_ext.out        -c test_cores/test_big_core.yaml --input-file int_ext.json              --expected-num-uops 12)
