--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,4 +37,5 @@ add_subdirectory(core/branch_pred)
 add_subdirectory(core/dcache)
 add_subdirectory(core/vector)
 add_subdirectory(core/unit_template)
+add_subdirectory(core/bpu)
 add_subdirectory(fusion)
