--- a/conda/environment.yml
+++ b/conda/environment.yml
@@ -2,82 +2,84 @@ name: riscv_perf_model
 channels:
   - conda-forge
 dependencies:
-  - _libgcc_mutex>=0.1=conda_forge
-  - _openmp_mutex>=4.5=2_gnu
-  - binutils_impl_linux-64>=2.39=he00db2b_1
-  - binutils_linux-64>=2.39=h5fc0e48_11
-  - bison>=3.8
+  - cmake>=3.25.2=h077f3f9_0
   - boost>=1.76.0=py310h7c3ba0c_1
   - boost-cpp>=1.76.0=h312852a_1
-  - bzip2>=1.0.8=h7f98852_4
-  - c-ares>=1.18.1=h7f98852_0
-  - ca-certificates>=2023.11.17=hbcca054_0
-  - clang>=14.0.6=ha770c72_1
-  - clang-14>=14.0.6=default_h7634d5b_1
-  - clangxx>=14.0.6=default_h1e1816b_1
-  - cmake>=3.25.2=h077f3f9_0
-  - cppcheck>=2.7.5=py310h94ea96f_1
-  - curl>=7.87.0=h6312ad2_0
-  - doxygen>=1.8.20=had0d8f1_0
-  - expat>=2.5.0=h27087fc_0
-  - flex>=2.6
-  - gcc>=10.4.0=hb92f740_13
-  - gcc_impl_linux-64>=10.4.0=h5231bdf_19
-  - gcc_linux-64>=10.4.0=h9215b83_11
-  - gxx_impl_linux-64>=10.4.0=h5231bdf_19
-  - gxx_linux-64>=10.4.0=h6e491c6_11
-  - hdf5>=1.10.6=nompi_h6a2412b_1114
-  - icu>=68.2=h9c3ff4c_0
-  - kernel-headers_linux-64>=2.6.32=he073ed8_15
-  - keyutils>=1.6.1=h166bdaf_0
-  - krb5>=1.20.1=hf9c8cef_0
-  - ld_impl_linux-64>=2.39=hcc3a1bd_1
-  - libblas>=3.9.0=16_linux64_openblas
-  - libcblas>=3.9.0=16_linux64_openblas
-  - libclang-cpp14>=14.0.6=default_h7634d5b_1
-  - libcurl>=7.87.0=h6312ad2_0
-  - libedit>=3.1.20191231=he28a2e2_2
-  - libev>=4.33=h516909a_1
-  - libffi>=3.4.2=h7f98852_5
-  - libgcc-devel_linux-64>=10.4.0=hd38fd1e_19
-  - libgcc-ng>=12.2.0=h65d4601_19
-  - libgfortran-ng>=12.2.0=h69a702a_19
-  - libgfortran5>=12.2.0=h337968e_19
-  - libgomp>=12.2.0=h65d4601_19
-  - libiconv>=1.17=h166bdaf_0
-  - liblapack>=3.9.0=16_linux64_openblas
-  - libllvm14>=14.0.6=hcd5def8_4
-  - libnghttp2>=1.51.0=hdcd2b5c_0
-  - libnsl>=2.0.0=h7f98852_0
-  - libopenblas>=0.3.21=pthreads_h78a6416_3
-  - libsanitizer>=10.4.0=h5246dfb_19
-  - libsqlite>=3.40.0=h753d276_0
-  - libssh2>=1.10.0=haa6b8db_3
-  - libstdcxx-devel_linux-64>=10.4.0=hd38fd1e_19
-  - libstdcxx-ng>=12.2.0=h46fd767_19
-  - libuuid>=2.32.1=h7f98852_1000
-  - libuv>=1.44.2=h166bdaf_0
-  - libzlib>=1.2.13=h166bdaf_4
-  - lld>=14.0.6=h07fd6de_1
-  - llvm-tools>=14.0.6=hcd5def8_4
-  - ncurses>=6.3=h27087fc_1
-  - numpy>=1.24.1=py310h08bbf29_0
-  - openssl>=1.1.1w=hd590300_0
-  - pcre>=8.45=h9c3ff4c_0
-  - pip>=23.3.1=pyhd8ed1ab_0
-  - pygments>=2.11.2=pyhd8ed1ab_0
-  - python>=3.10.8=h257c98d_0_cpython
-  - python_abi>=3.10=3_cp310
-  - rapidjson>=1.1.0=he1b5a44_1002
-  - readline>=8.1.2=h0f457ee_0
-  - rhash>=1.4.3=h166bdaf_0
-  - setuptools>=68.2.2=pyhd8ed1ab_0
-  - sqlite>=3.36.0=h9cd32fc_2
-  - sysroot_linux-64>=2.12=he073ed8_15
-  - tk>=8.6.12=h27826a3_0
-  - tzdata>=2022g=h191b570_0
-  - wheel>=0.42.0=pyhd8ed1ab_0
-  - xz>=5.2.6=h166bdaf_0
   - yaml-cpp>=0.7.0=h27087fc_2
-  - zlib>=1.2.13=h166bdaf_4
-  - zstd>=1.5.2=h6239696_4
+  - rapidjson>=1.1.0=he1b5a44_1002
+  - libsqlite>=3.40.0=h753d276_0
+  - sqlite>=3.36.0=h9cd32fc_2
+  - hdf5>=1.10.6=nompi_h6a2412b_1114
+  - clang>=14.0.6
+  - clang-14>=14.0.6
+  - clangxx>=14.0.6
+
+
+# - _libgcc_mutex>=0.1=conda_forge
+# - _openmp_mutex>=4.5=2_gnu
+# - binutils_impl_linux-64>=2.39=he00db2b_1
+# - binutils_linux-64>=2.39=h5fc0e48_11
+# - bison>=3.8
+# - bzip2>=1.0.8=h7f98852_4
+# - c-ares>=1.18.1=h7f98852_0
+# - ca-certificates>=2023.11.17=hbcca054_0
+# - cppcheck>=2.7.5=py310h94ea96f_1
+# - curl>=7.87.0=h6312ad2_0
+# - doxygen>=1.8.20=had0d8f1_0
+# - expat>=2.5.0=h27087fc_0
+# - flex>=2.6
+# - gcc>=10.4.0=hb92f740_13
+# - gcc_impl_linux-64>=10.4.0=h5231bdf_19
+# - gcc_linux-64>=10.4.0=h9215b83_11
+# - gxx_impl_linux-64>=10.4.0=h5231bdf_19
+# - gxx_linux-64>=10.4.0=h6e491c6_11
+# - icu>=68.2=h9c3ff4c_0
+# - kernel-headers_linux-64>=2.6.32=he073ed8_15
+# - keyutils>=1.6.1=h166bdaf_0
+# - krb5>=1.20.1=hf9c8cef_0
+# - ld_impl_linux-64>=2.39=hcc3a1bd_1
+# - libblas>=3.9.0=16_linux64_openblas
+# - libcblas>=3.9.0=16_linux64_openblas
+# - libclang-cpp14>=14.0.6=default_h7634d5b_1
+# - libcurl>=7.87.0=h6312ad2_0
+# - libedit>=3.1.20191231=he28a2e2_2
+# - libev>=4.33=h516909a_1
+# - libffi>=3.4.2=h7f98852_5
+# - libgcc-devel_linux-64>=10.4.0=hd38fd1e_19
+# - libgcc-ng>=12.2.0=h65d4601_19
+# - libgfortran-ng>=12.2.0=h69a702a_19
+# - libgfortran5>=12.2.0=h337968e_19
+# - libgomp>=12.2.0=h65d4601_19
+# - libiconv>=1.17=h166bdaf_0
+# - liblapack>=3.9.0=16_linux64_openblas
+# - libllvm14>=14.0.6=hcd5def8_4
+# - libnghttp2>=1.51.0=hdcd2b5c_0
+# - libnsl>=2.0.0=h7f98852_0
+# - libopenblas>=0.3.21=pthreads_h78a6416_3
+# - libsanitizer>=10.4.0=h5246dfb_19
+# - libssh2>=1.10.0=haa6b8db_3
+# - libstdcxx-devel_linux-64>=10.4.0=hd38fd1e_19
+# - libstdcxx-ng>=12.2.0=h46fd767_19
+# - libuuid>=2.32.1=h7f98852_1000
+# - libuv>=1.44.2=h166bdaf_0
+# - libzlib>=1.2.13=h166bdaf_4
+# - lld>=14.0.6=h07fd6de_1
+# - llvm-tools>=14.0.6=hcd5def8_4
+# - ncurses>=6.3=h27087fc_1
+# - numpy>=1.24.1=py310h08bbf29_0
+# - openssl>=1.1.1w=hd590300_0
+# - pcre>=8.45=h9c3ff4c_0
+# - pip>=23.3.1=pyhd8ed1ab_0
+# - pygments>=2.11.2=pyhd8ed1ab_0
+# - python>=3.10.8=h257c98d_0_cpython
+# - python_abi>=3.10=3_cp310
+# - readline>=8.1.2=h0f457ee_0
+# - rhash>=1.4.3=h166bdaf_0
+# - setuptools>=68.2.2=pyhd8ed1ab_0
+# - sysroot_linux-64>=2.12=he073ed8_15
+# - tk>=8.6.12=h27826a3_0
+# - tzdata>=2022g=h191b570_0
+# - wheel>=0.42.0=pyhd8ed1ab_0
+# - xz>=5.2.6=h166bdaf_0
+# - zlib>=1.2.13=h166bdaf_4
+# - zstd>=1.5.2=h6239696_4
