--- a/.github/workflows/conda/macos_env.yml
+++ b/.github/workflows/conda/macos_env.yml
@@ -2,182 +2,14 @@ name: riscv_perf_model
 channels:
   - conda-forge
 dependencies:
-  - atk-1.*                                                                                         
-  - backcall=0.2.*                                                                                  
-  - backports=1.*                                                                                   
-  - backports.functools_lru_cache=1.6.*                                                             
-  - binutils_impl_linux-64=2.*                                                                      
-  - bison=3.*                                                                      
-  - boost=1.78.*                                                                                    
-  - boost-cpp=1.78.*                                                                                
-  - brotli=1.0.*                                                                                    
-  - brotli-bin=1.0.*                                                                                
-  - brotlipy=0.7.*                                                                                  
-  - bzip2=1.0.*                                                                                     
-  - ca-certificates=2022.12.*                                                                       
-  - cairo=1.16.*                                                                                    
-  - c-ares=1.18.*                                                                                   
-  - cctools_osx-64=973.0.*                                                                          
-  - certifi=2022.12.*                                                                               
-  - cffi=1.15.*                                                                                     
-  - charset-normalizer=2.1.*                                                                        
-  - clang=14.0.*                                                                                    
-  - clang-14=14.0.*                                                                                 
-  - clang_osx-64=14.0.*                                                                             
-  - clangxx=14.0.*                                                                                  
-  - clangxx_osx-64=14.0.*                                                                           
-  - cmake=3.25.*                                                                                    
-  - compiler-rt=14.0.*                                                                              
-  - compiler-rt_linux-64=14.0.*                                                                     
-  - compiler-rt_osx-64=14.0.*                                                                       
-  - contourpy=1.0.*                                                                                 
-  - cppcheck=2.7.*                                                                                  
-  - cryptography=39.0.*                                                                             
-  - cycler=0.11.*                                                                                   
-  - cython=0.29.*                                                                                   
-  - decorator=5.1.*                                                                                 
-  - doxygen=1.9.*                                                                                   
-  - executing=1.2.*                                                                                 
-  - expat=2.5.*                                                                                     
-  - fontconfig=2.14.*                                                                               
-  - fonts-conda-ecosystem                                                                           
-  - fonts-conda-forge
-  - fonttools=4.38.*                                                                                
-  - font-ttf-dejavu-sans-mono=2.*                                                                   
-  - font-ttf-inconsolata=3.*                                                                        
-  - font-ttf-source-code-pro=2.*                                                                    
-  - font-ttf-ubuntu=0.*                                                                             
-  - freetype=2.12.*                                                                                 
-  - fribidi=1.0.*                                                                                   
-  - gdk-pixbuf=2.42.*                                                                               
-  - gettext=0.21.*                                                                                  
-  - glib=2.74.*                                                                                     
-  - glib-tools=2.74.*                                                                               
-  - gmp=6.2.*                                                                                       
-  - graphite2=1.3.*                                                                                 
-  - gst-plugins-base=1.22.*                                                                         
-  - gstreamer=1.22.*                                                                                
-  - gtk2=2.24.*                                                                                     
-  - harfbuzz=5.3.*                                                                                  
-  - hdf5=1.12.*                                                                                     
-  - icu=70.*                                                                                        
-  - idna=3.*                                                                                        
-  - ipython=8.10.*                                                                                  
-  - jedi=0.18.*                                                                                     
-  - jpeg                                                                                            
-  - kernel-headers_linux-64=2.6.*                                                                   
-  - kiwisolver=1.4.*                                                                                
-  - krb5=1.20.*                                                                                     
-  - lcms2=2.*                                                                                       
-  - ld64_osx-64                                                                                     
-  - ld_impl_linux-64=2.*                                                                            
-  - lerc=4.0.*     
-  - libaec=1.0.*                                                                                    
-  - libblas=3.9.*                                                                                   
-  - libbrotlicommon=1.0.*                                                                           
-  - libbrotlidec=1.0.*                                                                              
-  - libbrotlienc=1.0.*                                                                              
-  - libcblas=3.9.*                                                                                  
-  - libclang-cpp14=14.0.*                                                                           
-  - libcurl=7.88.*                                                                                  
-  - libcxx=14.0.*                                                                                   
-  - libdeflate=1.*                                                                                  
-  - libedit=3.1.*                                                                                   
-  - libev=4.*                                                                                       
-  - libffi=3.4.*                                                                                    
-  - _libgcc_mutex=0.*                                                                               
-  - libglib=2.74.*                                                                                  
-  - libiconv=1.*                                                                                    
-  - liblapack=3.9.*                                                                                 
-  - libllvm14=14.0.*                                                                                
-  - libnghttp2=1.51.*                                                                               
-  - libogg=1.3.*                                                                                    
-  - libopenblas=0.3.*                                                                               
-  - libopus=1.3.*                                                                                   
-  - libpng=1.6.*                                                                                    
-  - libsqlite=3.40.*                                                                                
-  - libssh2=1.10.*                                                                                  
-  - libtiff=4.5.*                                                                                   
-  - libuuid=2.32.*                                                                                  
-  - libuv=1.44.*                                                                                    
-  - libvorbis=1.3.*                                                                                 
-  - libwebp-base=1.2.*                                                                              
-  - libxcb=1.*                                                                                      
-  - libxml2=2.10.*                                                                                  
-  - libzlib=1.2.*                                                                                   
-  - lld=15.0.7     
-  - llvm-openmp=15.0.*                                                                              
-  - llvm-tools=14.0.*                                                                               
-  - lz4-c=1.9.*                                                                                     
-  - make=4.*                                                                                        
-  - matplotlib-base=3.7.*                                                                           
-  - matplotlib-inline=0.1.*                                                                         
-  - mpfr=4.1.*                                                                                      
-  - munkres=1.1.*                                                                                   
-  - ncurses=6.*                                                                                     
-  - numpy=1.21.*                                                                                    
-  - openjpeg=2.5.*                                                                                  
-  - openssl=3.0.*                                                                                   
-  - packaging=23.*                                                                                  
-  - pango=1.50.*                                                                                    
-  - parso=0.8.*                                                                                     
-  - pathlib2                                                                                        
-  - pcre2=10.*                                                                                      
-  - pcre=8.*                                                                                        
-  - pexpect=4.8.*                                                                                   
-  - pickleshare=0.7.*                                                                               
-  - pillow=9.4.*                                                                                    
-  - pip=23.0.*                                                                                      
-  - pixman=0.40.*                                                                                   
-  - popt=1.*                                                                                        
-  - prompt-toolkit=3.0.*                                                                            
-  - pthread-stubs=0.*                                                                               
-  - ptyprocess=0.7.*                                                                                
-  - pure_eval=0.2.*                                                                                 
-  - pycparser=2.*                                                                                   
-  - pygments=2.11.*                                                                                 
-  - pyopenssl=23.0.*                                                                                
-  - pyparsing=3.0.*                                                                                 
-  - pysocks=1.7.*
-  - python=3.10.*                                                                                   
-  - python_abi=3.*                                                                                  
-  - python-dateutil=2.8.*                                                                           
-  - pyyaml=6.*                                                                                      
-  - rapidjson=1.1.*                                                                                 
-  - readline=8.1.*                                                                                  
-  - requests=2.28.*                                                                                 
-  - rhash=1.4.*                                                                                     
-  - rsync=3.2.*                                                                                     
-  - setuptools=67.4.*                                                                               
-  - sigtool=0.1.*                                                                                   
-  - six=1.16.*                                                                                      
-  - sqlite=3.40.*                                                                                   
-  - stack_data=0.6.*                                                                                
-  - sysroot_linux-64=2.*                                                                            
-  - tapi=1100.0.*                                                                                   
-  - texlive-core                                                                                    
-  - tk=8.6.*                                                                                        
-  - traitlets=5.9.*                                                                                 
-  - tzdata                                                                                          
-  - unicodedata2=15.0.*                                                                             
-  - urllib3=1.26.*                                                                                  
-  - wcwidth=0.2.*                                                                                   
-  - wheel=0.38.*                                                                                    
-  - wxpython=4.2.*                                                                                  
-  - xorg-kbproto=1.0.*                                                                              
-  - xorg-libice=1.0.*                                                                               
-  - xorg-libsm=1.2.*                                                                                
-  - xorg-libx11=1.7.*                                                                               
-  - xorg-libxau=1.0.*                                                                               
-  - xorg-libxdmcp=1.1.*                                                                             
-  - xorg-libxext=1.3.*                                                                              
-  - xorg-libxrender=0.9.*                                                                           
-  - xorg-renderproto=0.11.*                                                                         
-  - xorg-xextproto=7.3.*                                                                            
-  - xorg-xproto=7.0.*                                                                               
-  - xxhash=0.8.*                                                                                    
-  - xz=5.2.*                                                                                        
-  - yaml=0.2.*                                                                                      
-  - yaml-cpp=0.7.*                                                                                  
-  - zlib=1.2.*                                                                                      
-  - zstd=1.5.*
+  - cmake>=3.25.2=h077f3f9_0
+  - boost>=1.76.0=py310h7c3ba0c_1
+  - boost-cpp>=1.76.0=h312852a_1
+  - yaml-cpp>=0.7.0=h27087fc_2
+  - rapidjson>=1.1.0=he1b5a44_1002
+  - libsqlite>=3.40.0=h753d276_0
+  - sqlite>=3.36.0=h9cd32fc_2
+  - hdf5>=1.10.6=nompi_h6a2412b_1114
+  - clang>=14.0.6
+  - clang-14>=14.0.6
+  - clangxx>=14.0.6
