Turn on valgrind testing for BP tset

--- a/test/core/branch_pred/CMakeLists.txt
+++ b/test/core/branch_pred/CMakeLists.txt
@@ -3,4 +3,6 @@ project(BranchPred_test)
 add_executable(BranchPred_test BranchPred_test.cpp)
 target_link_libraries(BranchPred_test core common_test SPARTA::sparta)
 
-sparta_named_test(BranchPred_test_Run  BranchPred_test)
+set (VALGRIND_REGRESS_ENABLED ON)
+set (VALGRIND_TEST_LABEL valgrind_test)
+sparta_named_test(BranchPred_test_Run BranchPred_test)
