Comment out the bptest for now -- cannot reproduce

--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -14,8 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         BUILD_TYPE: [Debug,Release]
-        #COMPILER: [gcc,clang]
-        COMPILER: [gcc]
+        COMPILER: [gcc,clang]
 
     name: Ubuntu-${{ matrix.BUILD_TYPE }}-${{matrix.COMPILER}}
     runs-on: ${{ matrix.os }}
