Minimally working BPU testbench

--- a/core/fetch/CMakeLists.txt
+++ b/core/fetch/CMakeLists.txt
@@ -2,8 +2,8 @@ add_library(fetch
   Fetch.cpp
   ICache.cpp
   SimpleBranchPred.cpp
-  BasePredictor.cpp
-  TAGE_SC_L.cpp
+  #BasePredictor.cpp
+  #TAGE_SC_L.cpp
   BPU.cpp
 )
 target_link_libraries(fetch instgen)
