--- a/test/core/bpu/CMakeLists.txt
+++ b/test/core/bpu/CMakeLists.txt
@@ -14,7 +14,7 @@ set(JSON ../json/branch.json)
 
 project(${PRJ})
 
-add_executable(${EXE} BPU_testbench.cpp ${BPUDir}/BPU.cpp ${BPUDir}/BPU.hpp ${CoreDir}/FTQ.cpp ${CoreDir}/FTQ.hpp BPUSource.hpp BPUSink.hpp)
+add_executable(${EXE} BPU_testbench.cpp ${BPUDir}/BPU.cpp ${BPUDir}/BPU.hpp ${BPUDir}/BasePredictor.cpp ${BPUDir}/BasePredictor.hpp ${CoreDir}/FTQ.cpp ${CoreDir}/FTQ.hpp BPUSource.hpp BPUSink.hpp)
 target_include_directories(${EXE} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(${EXE} core common_test ${STF_LINK_LIBS} mavis SPARTA::sparta)
